--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content='My Personal web portfolio' />
+  <meta property="og:image" content="https://i.ibb.co/nz7qTz2/favicon-me.png"/>
+  <meta property="og:description" content=" DESCRIPTION OF YOUR SITE" />
+  <meta property="og:url" content="https://ayash13.github.io/My-Portfolio/" />
+  <meta property="og:image:width" content='1200' />
+  <meta property="og:image:height" content='627' />
   <title>M Ayash - Personal Portfolio</title>
 
   <!--
