--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content='My Personal web portfolio' />
   <meta property="og:image" content="https://i.ibb.co/nz7qTz2/favicon-me.png"/>
-  <meta property="og:description" content=" DESCRIPTION OF YOUR SITE" />
+  <meta property="og:description" content="I am IT student at Muhammadiyah University of Yogyakarta. I currently on 4th semester, still learning about web and mobile app development." />
   <meta property="og:url" content="https://ayash13.github.io/My-Portfolio/" />
   <meta property="og:image:width" content='1200' />
   <meta property="og:image:height" content='627' />
