add another portfolio

--- a/index.html
+++ b/index.html
@@ -419,9 +419,9 @@
           <div class="overlay" data-overlay></div>
 
           <section class="testimonials-modal">
-
+            
             <button class="modal-close-btn" data-modal-close-btn>
-              <ion-icon name="close-outline"></ion-icon>
+              
             </button>
             <!--
             <div class="modal-img-wrapper">
@@ -770,8 +770,98 @@
               <!-- Modal content -->
               <div class="modal-content">
                 <span class="close">&times;</span>
-                <a class="clickMe" target="_blank" href="https://github.com/Ayash13/Lompah-App">Go to the page</a>
+                <a class="clickMe" target="_blank" href="https://ayash13.github.io/pokedex/">Go to the page</a>
                 <iframe id="myIframe2" src="" frameborder="0"></iframe>
+              </div>
+
+            </div>
+
+            <!-- Project item -->
+            <li class="project-item active" data-filter-item data-category="web development">
+              <a class="open-modal" data-url="https://ayash13.github.io/pokedex/" data-modal="#myModal1">
+
+                <figure style="cursor: pointer;" class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/pokedex_web.png" alt="Pokedex" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Pokedex</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <!-- Modal -->
+            <div id="myModal3" class="modal">
+
+              <!-- Modal content -->
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <a class="clickMe" target="_blank" href="https://ayash13.github.io/Mataf-TI-22.github.io/">Go to the page</a>
+                <iframe id="myIframe3" src="" frameborder="0"></iframe>
+              </div>
+
+            </div>
+
+            <!-- Project item -->
+            <li class="project-item active" data-filter-item data-category="web development">
+              <a class="open-modal" data-url="https://ayash13.github.io/Mataf-TI-22.github.io/" data-modal="#myModal1">
+
+                <figure style="cursor: pointer;" class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/website_mataf.png" alt="Website MATAF TI" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Website MATAF TI</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <!-- Modal -->
+            <div id="myModal4" class="modal">
+
+              <!-- Modal content -->
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <a class="clickMe" target="_blank" href="https://ayash13.github.io/MATAF-TI-SPONSOR.github.io/">Go to the page</a>
+                <iframe id="myIframe4" src="" frameborder="0"></iframe>
+              </div>
+
+            </div>
+
+            <!-- Project item -->
+            <li class="project-item active" data-filter-item data-category="web development">
+              <a class="open-modal" data-url="https://ayash13.github.io/MATAF-TI-SPONSOR.github.io/" data-modal="#myModal1">
+
+                <figure style="cursor: pointer;" class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/sponsor_mataf.png" alt="Website Sponsor MATAF TI" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Website Sponsor MATAF TI</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <!-- Modal -->
+            <div id="myModal5" class="modal">
+
+              <!-- Modal content -->
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <a class="clickMe" target="_blank" href="https://github.com/Ayash13/Lompah-App">Go to the page</a>
+                <iframe id="myIframe5" src="" frameborder="0"></iframe>
               </div>
 
             </div>
