add another portfolio and change pp

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content='My Personal web portfolio' />
-  <meta property="og:image" content="https://i.ibb.co/nz7qTz2/favicon-me.png"/>
-  <meta property="og:description" content="I am IT student at Muhammadiyah University of Yogyakarta. I currently on 4th semester, still learning about web and mobile app development." />
+  <meta property="og:image" content="https://i.ibb.co/nz7qTz2/favicon-me.png" />
+  <meta property="og:description"
+    content="I am IT student at Muhammadiyah University of Yogyakarta. I currently on 4th semester, still learning about web and mobile app development." />
   <meta property="og:url" content="https://ayash13.github.io/My-Portfolio/" />
   <meta property="og:image:width" content='1200' />
   <meta property="og:image:height" content='627' />
@@ -133,8 +134,8 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.facebook.com/profile.php?id=100012909730465" class="social-link" target="_blank">
-              <ion-icon name="logo-facebook"></ion-icon>
+            <a href="https://www.linkedin.com/in/m-ayash-b48058250/" class="social-link" target="_blank">
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
@@ -419,9 +420,9 @@
           <div class="overlay" data-overlay></div>
 
           <section class="testimonials-modal">
-            
+
             <button class="modal-close-btn" data-modal-close-btn>
-              
+
             </button>
             <!--
             <div class="modal-img-wrapper">
@@ -583,11 +584,11 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">HTML, CSS, JavaScript</h5>
-                <data value="60">60%</data>
+                <data value="40">40%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 60%;"></div>
+                <div class="skill-progress-fill" style="width: 40%;"></div>
               </div>
 
             </li>
@@ -596,11 +597,11 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Flutter</h5>
-                <data value="70">70%</data>
+                <data value="50">50%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
+                <div class="skill-progress-fill" style="width: 50%;"></div>
               </div>
 
             </li>
@@ -622,11 +623,11 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
+                <data value="30">30%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
+                <div class="skill-progress-fill" style="width: 30%;"></div>
               </div>
 
             </li>
@@ -778,7 +779,7 @@
 
             <!-- Project item -->
             <li class="project-item active" data-filter-item data-category="web development">
-              <a class="open-modal" data-url="https://ayash13.github.io/pokedex/" data-modal="#myModal1">
+              <a class="open-modal" data-url="https://ayash13.github.io/pokedex/" data-modal="#myModal2">
 
                 <figure style="cursor: pointer;" class="project-img">
                   <div class="project-item-icon-box">
@@ -800,7 +801,8 @@
               <!-- Modal content -->
               <div class="modal-content">
                 <span class="close">&times;</span>
-                <a class="clickMe" target="_blank" href="https://ayash13.github.io/Mataf-TI-22.github.io/">Go to the page</a>
+                <a class="clickMe" target="_blank" href="https://ayash13.github.io/Mataf-TI-22.github.io/">Go to the
+                  page</a>
                 <iframe id="myIframe3" src="" frameborder="0"></iframe>
               </div>
 
@@ -808,7 +810,7 @@
 
             <!-- Project item -->
             <li class="project-item active" data-filter-item data-category="web development">
-              <a class="open-modal" data-url="https://ayash13.github.io/Mataf-TI-22.github.io/" data-modal="#myModal1">
+              <a class="open-modal" data-url="https://ayash13.github.io/Mataf-TI-22.github.io/" data-modal="#myModal3">
 
                 <figure style="cursor: pointer;" class="project-img">
                   <div class="project-item-icon-box">
@@ -830,7 +832,8 @@
               <!-- Modal content -->
               <div class="modal-content">
                 <span class="close">&times;</span>
-                <a class="clickMe" target="_blank" href="https://ayash13.github.io/MATAF-TI-SPONSOR.github.io/">Go to the page</a>
+                <a class="clickMe" target="_blank" href="https://ayash13.github.io/MATAF-TI-SPONSOR.github.io/">Go to
+                  the page</a>
                 <iframe id="myIframe4" src="" frameborder="0"></iframe>
               </div>
 
@@ -838,7 +841,8 @@
 
             <!-- Project item -->
             <li class="project-item active" data-filter-item data-category="web development">
-              <a class="open-modal" data-url="https://ayash13.github.io/MATAF-TI-SPONSOR.github.io/" data-modal="#myModal1">
+              <a class="open-modal" data-url="https://ayash13.github.io/MATAF-TI-SPONSOR.github.io/"
+                data-modal="#myModal4">
 
                 <figure style="cursor: pointer;" class="project-img">
                   <div class="project-item-icon-box">
@@ -869,7 +873,7 @@
             <!-- Project item -->
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a class="open-modal" data-url="https://ayash13.github.io/Duplicate-GitPage/" data-modal="#myModal2">
+              <a class="open-modal" data-url="https://ayash13.github.io/Duplicate-GitPage/" data-modal="#myModal5">
 
                 <figure style="cursor: pointer;" class="project-img">
                   <div class="project-item-icon-box">
@@ -880,6 +884,70 @@
                 </figure>
 
                 <h3 class="project-title">Lompah</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
+            <!-- Modal -->
+            <div id="myModal6" class="modal">
+
+              <!-- Modal content -->
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <a class="clickMe" target="_blank" href="https://youtu.be/WkLT26To_xE">Watch on youtube</a>
+                <iframe id="myIframe6" src="" frameborder="0"></iframe>
+              </div>
+
+            </div>
+
+            <!-- Project item -->
+
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a class="open-modal" data-url="https://www.youtube.com/embed/WkLT26To_xE" data-modal="#myModal6">
+
+                <figure style="cursor: pointer;" class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Nandur.png" alt="Nandur" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Nandur</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
+            <!-- Modal -->
+            <div id="myModal7" class="modal">
+
+              <!-- Modal content -->
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <a class="clickMe" target="_blank" href="https://ayash13.github.io/Ayflix/">Go to the page</a>
+                <iframe id="myIframe7" src="" frameborder="0"></iframe>
+              </div>
+
+            </div>
+
+            <!-- Project item -->
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a class="open-modal" data-url="https://ayash13.github.io/Ayflix/" data-modal="#myModal7">
+
+                <figure style="cursor: pointer;" class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/ayflix.png" alt="Nandur" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Ayflix</h3>
 
                 <p class="project-category">Applications</p>
 
@@ -1119,8 +1187,9 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.753092955588!2d110.32053312247253!3d-7.8159395763534745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7af914e5f01d69%3A0x3dd8e9bb0b49f554!2sKost%20City!5e0!3m2!1sen!2sid!4v1681316618000!5m2!1sen!2sid"></iframe>"
-            width="400" height="300" loading="lazy"></iframe>
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63245.97085555844!2d110.33364505739577!3d-7.803248457452009!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a5787bd5b6bc5%3A0x21723fd4d3684f71!2sYogyakarta%2C%20Yogyakarta%20City%2C%20Special%20Region%20of%20Yogyakarta!5e0!3m2!1sen!2sid!4v1685272934044!5m2!1sen!2sid"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
           </figure>
         </section>
 
