--- a/index.html
+++ b/index.html
@@ -949,7 +949,39 @@
 
                 <h3 class="project-title">Ayflix</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <!-- Modal -->
+            <div id="myModal8" class="modal">
+
+              <!-- Modal content -->
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <a class="clickMe" target="_blank" href="https://ayash13.github.io/Day-in-my-life/">Go to the page</a>
+                <iframe id="myIframe8" src="" frameborder="0"></iframe>
+              </div>
+
+            </div>
+
+            <!-- Project item -->
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a class="open-modal" data-url="https://ayash13.github.io/Day-in-my-life/" data-modal="#myModal8">
+
+                <figure style="cursor: pointer;" class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/dayInMyLife.png" alt="Nandur" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">A day in my life</h3>
+
+                <p class="project-category">Web development</p>
 
               </a>
             </li>
