--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content='My Personal web portfolio' />
-  <meta property="og:image" content="https://i.ibb.co/nz7qTz2/favicon-me.png" />
+  <meta property="og:title" content='M Ayash Personal Web Portfolio' />
+  <meta property="og:image" content="assets/images/favicon.png" />
   <meta property="og:description"
-    content="I am IT student at Muhammadiyah University of Yogyakarta. I currently on 4th semester, still learning about web and mobile app development." />
+    content="I am Muhammad Ayash Al-fatih, IT student at Muhammadiyah University of Yogyakarta. I currently on 5th semester, still learning about web and mobile app development." />
   <meta property="og:url" content="https://ayash13.github.io/My-Portfolio/" />
   <meta property="og:image:width" content='1200' />
   <meta property="og:image:height" content='627' />
@@ -17,7 +17,11 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/favicon-me.png" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
   <!--
     - custom css link
