--- a/index.html
+++ b/index.html
@@ -5,32 +5,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content='M Ayash Personal Web Portfolio' />
+  <meta name="description"
+    content="Muhammad Ayash Al-fatih's personal portfolio showcasing web and mobile app development skills.">
+  <meta property="og:title" content="Muhammad Ayash Al-fatih - Web and Mobile App Developer" />
   <meta property="og:image" content="assets/images/favicon.png" />
   <meta property="og:description"
-    content="I am Muhammad Ayash Al-fatih, IT student at Muhammadiyah University of Yogyakarta. I currently on 5th semester, still learning about web and mobile app development." />
+    content="Muhammad Ayash Al-fatih's personal portfolio showcasing web and mobile app development skills." />
   <meta property="og:url" content="https://ayash13.github.io/My-Portfolio/" />
-  <meta property="og:image:width" content='1200' />
-  <meta property="og:image:height" content='627' />
-  <title>M Ayash - Personal Portfolio</title>
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="627" />
+  <title>Muhammad Ayash Al-fatih - Web and Mobile App Developer</title>
 
-  <!--
-    - favicon
-  -->
+  <!-- Favicon -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 
-  <!--
-    - custom css link
-  -->
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
 
-  <!--
-    - google font link
-  -->
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
