--- a/index.html
+++ b/index.html
@@ -467,6 +467,14 @@
               <img style="cursor: pointer;" src="./assets/images/Certificate-1.png" alt="Certificate-1"
                 onclick="showCertificate(this)">
             </li>
+            <li class="certificate-item">
+              <img style="cursor: pointer;" src="./assets/images/E-Piagam_Équipe_233-1.png" alt="Equipe PKMM Certificate"
+                onclick="showCertificate(this)">
+            </li>
+            <li class="certificate-item">
+              <img style="cursor: pointer;" src="./assets/images/E-Piagam_Clinamen_997-1.png" alt="Clinamen PKMM Certificate"
+                onclick="showCertificate(this)">
+            </li>
           </ul>
         </section>
       </article>
@@ -980,6 +988,38 @@
                 </figure>
 
                 <h3 class="project-title">A day in my life</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <!-- Modal -->
+            <div id="myModal9" class="modal">
+
+              <!-- Modal content -->
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <a class="clickMe" target="_blank" href="https://www.mmfest23.com/">Go to the page</a>
+                <iframe id="myIframe9" src="" frameborder="0"></iframe>
+              </div>
+
+            </div>
+
+            <!-- Project item -->
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a class="open-modal" data-url="https://www.mmfest23.com/" data-modal="#myModal9">
+
+                <figure style="cursor: pointer;" class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/MMF-23.png" alt="MMFEST 23" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Official Web MMFEST 23</h3>
 
                 <p class="project-category">Web development</p>
 
