--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                 onclick="showCertificate(this)">
             </li>
             <li class="certificate-item">
-              <img style="cursor: pointer;" src="./assets/images/E-Piagam_Équipe_233-1.png" alt="Equipe PKMM Certificate"
+              <img style="cursor: pointer;" src="./assets/images//E-Piagam_Équipe_233-1 2-2.png" alt="Equipe PKMM Certificate"
                 onclick="showCertificate(this)">
             </li>
             <li class="certificate-item">
