add new certificate

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Muhammad Ayash Al-fatih's personal portfolio showcasing web and mobile app development skills.">
-  <meta property="og:title" content="Muhammad Ayash Al-fatih - Web and Mobile App Developer" />
+    content="Ayash's personal portfolio showcasing web and mobile app development skills.">
+  <meta property="og:title" content="Ayash13 - Web and Mobile App Developer" />
   <meta property="og:image" content="assets/images/favicon.png" />
   <meta property="og:description"
-    content="Muhammad Ayash Al-fatih's personal portfolio showcasing web and mobile app development skills." />
-  <meta property="og:url" content="https://ayash13.github.io/My-Portfolio/" />
+    content="Ayash's personal portfolio showcasing web and mobile app development skills." />
+  <meta property="og:url" content="https://www.ayash13.site/" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="627" />
-  <title>Muhammad Ayash Al-fatih - Web and Mobile App Developer</title>
+  <title>Ayash13 - Web and Mobile App Developer</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -461,18 +461,26 @@
         -->
 
         <section class="certificate">
-          <h3 class="h3 certificate-title">Certificate</h3>
+          <h3 class="h3 certificate-title">Awards Certificate</h3>
           <ul class="certificate-list has-scrollbar">
-            <li class="certificate-item">
-              <img style="cursor: pointer;" src="./assets/images/Certificate-1.png" alt="Certificate-1"
-                onclick="showCertificate(this)">
-            </li>
             <li class="certificate-item">
               <img style="cursor: pointer;" src="./assets/images/E-Piagam_Equipe_233-1 2-2.png" alt="Equipe PKMM Certificate"
                 onclick="showCertificate(this)">
             </li>
             <li class="certificate-item">
               <img style="cursor: pointer;" src="./assets/images/E-Piagam_Clinamen_997-1.png" alt="Clinamen PKMM Certificate"
+                onclick="showCertificate(this)">
+            </li>
+          </ul>
+          <br>
+          <h3 class="h3 certificate-title">Others Certificate</h3>
+          <ul class="certificate-list has-scrollbar">
+            <li class="certificate-item">
+              <img style="cursor: pointer;" src="./assets/images/Certificate-1.png" alt="Invfest Ceritificate"
+                onclick="showCertificate(this)">
+            </li>
+            <li class="certificate-item">
+              <img style="cursor: pointer;" src="./assets/images/sertifikat_course_80_1875032_281123155244-1.png" alt="Dicoding Memulai Pemrograman Dengan Kotlin Certificate"
                 onclick="showCertificate(this)">
             </li>
           </ul>
@@ -592,7 +600,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">HTML, CSS, JavaScript</h5>
-                <data value="40">40%</data>
+                <data value="50">50%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -605,7 +613,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Flutter</h5>
-                <data value="50">50%</data>
+                <data value="70">70%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -617,8 +625,8 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="50">50%</data>
+                <h5 class="h5">Web & App design</h5>
+                <data value="60">60%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -631,7 +639,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Graphic design</h5>
-                <data value="30">30%</data>
+                <data value="40">40%</data>
               </div>
 
               <div class="skill-progress-bg">
