--- a/index.html
+++ b/index.html
@@ -134,20 +134,20 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/muhammad-ayash-al-fatih-b48058250/" class="social-link" target="_blank">
-              <ion-icon name="logo-linkedin"></ion-icon>
+            <a href="https://www.linkedin.com/in/ayash13/" class="social-link" target="_blank">
+              <ion-icon name="Linkedin Ayash"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
             <a href="https://github.com/Ayash13" class="social-link" target="_blank">
-              <ion-icon name="logo-github"></ion-icon>
+              <ion-icon name="Github Ayash"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
             <a href="https://www.instagram.com/ayash.af/" class="social-link" target="_blank">
-              <ion-icon name="logo-instagram"></ion-icon>
+              <ion-icon name="Instagram Ayash"></ion-icon>
             </a>
           </li>
 
