--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
 
           <li class="social-item">
             <a href="https://www.linkedin.com/in/ayash13/" class="social-link" target="_blank">
-              <ion-icon name="Linkedin Ayash"></ion-icon>
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
             <a href="https://github.com/Ayash13" class="social-link" target="_blank">
-              <ion-icon name="Github Ayash"></ion-icon>
+              <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
             <a href="https://www.instagram.com/ayash.af/" class="social-link" target="_blank">
-              <ion-icon name="Instagram Ayash"></ion-icon>
+              <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
 
