change certificate name

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
           <h3 class="h3 certificate-title">Others Certificate</h3>
           <ul class="certificate-list has-scrollbar">
             <li class="certificate-item">
-              <img style="cursor: pointer;" src="./assets/images/Certificate-1.png" alt="Invfest Ceritificate"
+              <img style="cursor: pointer;" src="./assets/images/Sertifikat-Invfest-Muhammad Ayash Al-fatih.png" alt="Invfest Ceritificate"
                 onclick="showCertificate(this)">
             </li>
             <li class="certificate-item">
