update link kmti

--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
               <!-- Modal content -->
               <div class="modal-content">
                 <span class="close">&times;</span>
-                <a class="clickMe" target="_blank" href="https://www.kmtiumy.site">Go to the page</a>
+                <a class="clickMe" target="_blank" href="https://ayash13.github.io/kmti/">Go to the page</a>
                 <iframe id="myIframe1" src="" frameborder="0"></iframe>
               </div>
 
@@ -754,7 +754,7 @@
 
             <!-- Project item -->
             <li class="project-item active" data-filter-item data-category="web development">
-              <a class="open-modal" data-url="https://www.kmtiumy.site" data-modal="#myModal1">
+              <a class="open-modal" data-url="https://ayash13.github.io/kmti/" data-modal="#myModal1">
 
                 <figure style="cursor: pointer;" class="project-img">
                   <div class="project-item-icon-box">
