update instagram style

--- a/index.html
+++ b/index.html
@@ -132,15 +132,14 @@
 
         <div class="separator"></div>
 
-        <ul class="social-list">
-
-          <li class="social-item">
-            <a href="https://www.instagram.com/ayash.af/" class="social-link" target="_blank">
-              <ion-icon name="logo-instagram"></ion-icon>
+        <ul class="social-list" style="list-style: none; padding: 0; display: flex; justify-content: center;">
+          <li class="social-item" style="display: flex; align-items: center;">
+            <a href="https://www.instagram.com/ayash.af/" class="social-link" target="_blank" style="display: flex; align-items: center;">
+              <ion-icon name="logo-instagram" style="margin-right: 5px;"></ion-icon>
+              <p style="margin: 0;">Instagram</p>
             </a>
           </li>
-
-        </ul>
+        </ul>        
 
       </div>
 
