Add new certificate

--- a/index.html
+++ b/index.html
@@ -497,6 +497,14 @@
                   onclick="showCertificate(this)"
                 />
               </li>
+              <li class="certificate-item">
+                <img
+                  style="cursor: pointer"
+                  src="./assets/images/sertifikat_course_51_1875032_021223105647-2-1.png"
+                  alt="Dicoding Belajar Membuat Aplikasi Androud Pemula Certificate"
+                  onclick="showCertificate(this)"
+                />
+              </li>
             </ul>
           </section>
         </article>
