optimizing certificate layout

--- a/index.html
+++ b/index.html
@@ -460,7 +460,8 @@
 
           <section class="certificate">
             <h3 class="h3 certificate-title">Awards Certificate</h3>
-            <ul class="certificate-list has-scrollbar">
+            <div>
+              <ul class="certificate-list has-scrollbar">
               <li class="certificate-item">
                 <img
                   style="cursor: pointer"
@@ -478,6 +479,7 @@
                 />
               </li>
             </ul>
+            </div>
             <br />
             <h3 class="h3 certificate-title">Others Certificate</h3>
             <ul class="certificate-list has-scrollbar">
