--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
               <ul class="certificate-list has-scrollbar">
               <li class="certificate-item">
                 <img
-                  style="cursor: pointer"
+                  style="cursor: pointer; max-width: 400px; height: auto;"
                   src="./assets/images/E-Piagam_Equipe_233-1 2-2.png"
                   alt="Equipe PKMM Certificate"
                   onclick="showCertificate(this)"
@@ -472,7 +472,7 @@
               </li>
               <li class="certificate-item">
                 <img
-                  style="cursor: pointer"
+                  style="cursor: pointer ; max-width: 400px; height: auto;"
                   src="./assets/images/E-Piagam_Clinamen_997-1.png"
                   alt="Clinamen PKMM Certificate"
                   onclick="showCertificate(this)"
@@ -485,7 +485,7 @@
             <ul class="certificate-list has-scrollbar">
               <li class="certificate-item">
                 <img
-                  style="cursor: pointer"
+                  style="cursor: pointer; max-width: 400px; height: auto;"
                   src="./assets/images/Sertifikat-Invfest-Muhammad Ayash Al-fatih.png"
                   alt="Invfest Ceritificate"
                   onclick="showCertificate(this)"
@@ -493,7 +493,7 @@
               </li>
               <li class="certificate-item">
                 <img
-                  style="cursor: pointer"
+                  style="cursor: pointer; max-width: 400px; height: auto;"
                   src="./assets/images/sertifikat_course_80_1875032_281123155244-1.png"
                   alt="Dicoding Memulai Pemrograman Dengan Kotlin Certificate"
                   onclick="showCertificate(this)"
@@ -501,7 +501,7 @@
               </li>
               <li class="certificate-item">
                 <img
-                  style="cursor: pointer"
+                  style="cursor: pointer; max-width: 400px; height: auto;"
                   src="./assets/images/sertifikat_course_51_1875032_021223105647-2-1.png"
                   alt="Dicoding Belajar Membuat Aplikasi Androud Pemula Certificate"
                   onclick="showCertificate(this)"
