make certificate section more clean

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         -->
 
         <section class="certificate">
-          <h3 class="h3 certificate-title">Awards Certificate</h3>
+          <h3 class="h3 certificate-title">Certificate</h3>
           <div>
             <ul class="certificate-list has-scrollbar">
               <li class="certificate-item">
@@ -286,27 +286,23 @@
                   src="./assets/images/E-Piagam_Clinamen_997-1.png" alt="Clinamen PKMM Certificate"
                   onclick="showCertificate(this)" />
               </li>
+              <li class="certificate-item">
+                <img style="cursor: pointer; max-width: 400px; height: auto;"
+                  src="./assets/images/Sertifikat-Invfest-Muhammad Ayash Al-fatih.png" alt="Invfest Ceritificate"
+                  onclick="showCertificate(this)" />
+              </li>
+              <li class="certificate-item">
+                <img style="cursor: pointer; max-width: 400px; height: auto;"
+                  src="./assets/images/sertifikat_course_80_1875032_281123155244-1.png"
+                  alt="Dicoding Memulai Pemrograman Dengan Kotlin Certificate" onclick="showCertificate(this)" />
+              </li>
+              <li class="certificate-item">
+                <img style="cursor: pointer; max-width: 400px; height: auto;"
+                  src="./assets/images/sertifikat_course_51_1875032_021223105647-2-1.png"
+                  alt="Dicoding Belajar Membuat Aplikasi Androud Pemula Certificate" onclick="showCertificate(this)" />
+              </li>
             </ul>
           </div>
-          <br />
-          <h3 class="h3 certificate-title">Others Certificate</h3>
-          <ul class="certificate-list has-scrollbar">
-            <li class="certificate-item">
-              <img style="cursor: pointer; max-width: 400px; height: auto;"
-                src="./assets/images/Sertifikat-Invfest-Muhammad Ayash Al-fatih.png" alt="Invfest Ceritificate"
-                onclick="showCertificate(this)" />
-            </li>
-            <li class="certificate-item">
-              <img style="cursor: pointer; max-width: 400px; height: auto;"
-                src="./assets/images/sertifikat_course_80_1875032_281123155244-1.png"
-                alt="Dicoding Memulai Pemrograman Dengan Kotlin Certificate" onclick="showCertificate(this)" />
-            </li>
-            <li class="certificate-item">
-              <img style="cursor: pointer; max-width: 400px; height: auto;"
-                src="./assets/images/sertifikat_course_51_1875032_021223105647-2-1.png"
-                alt="Dicoding Belajar Membuat Aplikasi Androud Pemula Certificate" onclick="showCertificate(this)" />
-            </li>
-          </ul>
         </section>
       </article>
 
