--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -179,7 +180,7 @@
         <section class="about-text">
           <p>
             I am IT student at Muhammadiyah University of Yogyakarta. I
-            currently on 5th semester, still learning about web and mobile app
+            currently on 6th semester, still learning about web and mobile app
             development.
           </p>
 
@@ -370,16 +371,11 @@
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">KMTI Web Development</h4>
 
-              <span>2021 - Now</span>
+              <span>2021 - 2022</span>
 
               <p class="timeline-text">
-                Since 2021, I have been involved in building and maintaining
-                the website of KMTI, an IT organization. Through this
-                experience, I have gained valuable skills in web development
-                and learned how to effectively communicate with clients and
-                stakeholders to ensure their needs are met. Working on the
-                KMTI website has also allowed me to improve my skills in
-                project management, teamwork, and problem-solving.
+                Since 2021, I've been building and maintaining the KMTI website, which improved my web development,
+                client communication, project management, teamwork, and problem-solving skills.
               </p>
             </li>
 
@@ -389,15 +385,26 @@
               <span>2022</span>
 
               <p class="timeline-text">
-                In 2022, I participated in a mobile app competition with an
-                agriculture theme. Using Flutter, I developed an app that
-                allowed users to buy and sell agriculture products, as well as
-                access news, community features, planting schedules, and
-                weather information. Through this competition, I gained
-                valuable experience in mobile app development and learned how
-                to create an app that addresses the needs of a specific user
-                group.
+                In 2022, I developed a Flutter app for an agriculture-themed competition. The app lets users buy/sell
+                products, access news, and view community features, schedules, and weather. This experience enhanced my
+                mobile app development skills."
               </p>
+            </li>
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Assistant Lecturer</h4>
+              <span>September 2023 - Present</span>
+              <p class="timeline-text">Universitas Muhammadiyah Yogyakarta, Yogyakarta, Indonesia</p>
+            </li>
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Mobile Development Cohort at Bangkit Academy 2024</h4>
+              <span>February 2024 - Present</span>
+              <p class="timeline-text">Bangkit Academy led by Google, Tokopedia, Gojek, & Traveloka</p>
+            </li>
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Chief Technology Officer</h4>
+              <span>February 2024 - Present</span>
+              <p class="timeline-text">PT Bumantara Harapan Bersama, Hegarmanah, Kec. Jatinangor, Kab. Sumedang,
+                Provinsi Jawa Barat</p>
             </li>
           </ol>
         </section>
