add filter category on mobile version

--- a/index.html
+++ b/index.html
@@ -45,20 +45,19 @@
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
         <figure class="avatar-box">
-          <img style="border-radius: 20px" src="./assets/images/my-avatar.png" alt="M Ayash Al-fatih" width="80" />
+          <img style="border-radius: 20px" src="./assets/images/my-avatar.png" alt="M Ayash Al-fatih" width="80">
         </figure>
 
         <div class="info-content">
           <h1 class="name" title="Richard hanrick">M Ayash Al-fatih</h1>
-
           <p style="font-weight: bold" class="title">IT Student</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
           <span>Show Contacts</span>
-
           <ion-icon name="chevron-down"></ion-icon>
         </button>
+
       </div>
 
       <div class="sidebar-info_more">
@@ -490,7 +489,6 @@
         <header>
           <h2 class="h2 article-title">Portfolio</h2>
         </header>
-
         <section class="projects">
           <ul class="filter-list"></ul>
           <ul class="project-list"></ul>
