--- a/index.html
+++ b/index.html
@@ -278,28 +278,58 @@
             <ul class="certificate-list has-scrollbar">
               <li class="certificate-item">
                 <img style="cursor: pointer; max-width: 400px; height: auto;"
-                  src="./assets/images/E-Piagam_Equipe_233-1 2-2.png" alt="Equipe PKMM Certificate"
+                  src="./assets/images/Certificate/E-Piagam_Equipe_233-1 2-2.png" alt="Equipe PKMM Certificate"
                   onclick="showCertificate(this)" />
               </li>
               <li class="certificate-item">
                 <img style="cursor: pointer ; max-width: 400px; height: auto;"
-                  src="./assets/images/E-Piagam_Clinamen_997-1.png" alt="Clinamen PKMM Certificate"
+                  src="./assets/images/Certificate/E-Piagam_Clinamen_997-1.png" alt="Clinamen PKMM Certificate"
                   onclick="showCertificate(this)" />
               </li>
               <li class="certificate-item">
                 <img style="cursor: pointer; max-width: 400px; height: auto;"
-                  src="./assets/images/Sertifikat-Invfest-Muhammad Ayash Al-fatih.png" alt="Invfest Ceritificate"
-                  onclick="showCertificate(this)" />
+                  src="./assets/images/Certificate/Sertifikat-Invfest-Muhammad Ayash Al-fatih.png"
+                  alt="Invfest Ceritificate" onclick="showCertificate(this)" />
               </li>
               <li class="certificate-item">
                 <img style="cursor: pointer; max-width: 400px; height: auto;"
-                  src="./assets/images/sertifikat_course_80_1875032_281123155244-1.png"
+                  src="./assets/images/Certificate/ilovepdf_merged (1)_page-0001.jpg"
                   alt="Dicoding Memulai Pemrograman Dengan Kotlin Certificate" onclick="showCertificate(this)" />
               </li>
               <li class="certificate-item">
                 <img style="cursor: pointer; max-width: 400px; height: auto;"
-                  src="./assets/images/sertifikat_course_51_1875032_021223105647-2-1.png"
+                  src="./assets/images/Certificate/ilovepdf_merged (1)_page-0002.jpg"
                   alt="Dicoding Belajar Membuat Aplikasi Androud Pemula Certificate" onclick="showCertificate(this)" />
+              </li>
+              <li class="certificate-item">
+                <img style="cursor: pointer; max-width: 400px; height: auto;"
+                  src="./assets/images/Certificate/ilovepdf_merged (1)_page-0002.jpg"
+                  alt="Dicoding Belajar Membuat Aplikasi Androud Pemula Certificate" onclick="showCertificate(this)" />
+              </li>
+              <li class="certificate-item">
+                <img style="cursor: pointer; max-width: 400px; height: auto;"
+                  src="./assets/images/Certificate/ilovepdf_merged (1)_page-0003.jpg"
+                  alt="Dicoding Belajar Prinsip Pemrograman SOLID" onclick="showCertificate(this)" />
+              </li>
+              <li class="certificate-item">
+                <img style="cursor: pointer; max-width: 400px; height: auto;"
+                  src="./assets/images/Certificate/ilovepdf_merged (1)_page-0004.jpg" alt="Dicoding Belajar Dasar AI"
+                  onclick="showCertificate(this)" />
+              </li>
+              <li class="certificate-item">
+                <img style="cursor: pointer; max-width: 400px; height: auto;"
+                  src="./assets/images/Certificate/ilovepdf_merged (1)_page-0005.jpg"
+                  alt="Dicoding Belajar Penerapan Machine Learning Untuk Android" onclick="showCertificate(this)" />
+              </li>
+              <li class="certificate-item">
+                <img style="cursor: pointer; max-width: 400px; height: auto;"
+                  src="./assets/images/Certificate/ilovepdf_merged (1)_page-0006.jpg"
+                  alt="Dicoding Belajar Fundamental Aplikasi Android " onclick="showCertificate(this)" />
+              </li>
+              <li class="certificate-item">
+                <img style="cursor: pointer; max-width: 400px; height: auto;"
+                  src="./assets/images/Certificate/ilovepdf_merged (1)_page-0007.jpg"
+                  alt="Dicoding Belajar Pengembangan Aplikasi Android Intermediate" onclick="showCertificate(this)" />
               </li>
             </ul>
           </div>
